--- a/XmlErrorFinder.csproj
+++ b/XmlErrorFinder.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AngleSharp.Xml" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
